# actions

./: package.json  pyproject.toml
.github/workflows/: ci-tests.yml
actions/audit_repos/: action.yml
actions/facebook_post/: pyproject.toml
actions/get_changed_files/: action.yml
actions/pinact/: action.yml
actions/release_changelog/: action.yml
actions/release_create/: action.yml
actions/release_setup/: pyproject.toml
actions/screenshot/: action.yml
actions/setup_python/: pyproject.toml
actions/trailing_spaces/: action.yml
actions/virtual_desktop/: action.yml  pyproject.toml
tests/setup_python/version_files/pipfile/with-dependencies/: Pipfile
tests/setup_python/version_files/pyproject-toml/requires-python-with-patch/: pyproject.toml
