[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lizardbyte-actions-facebook-post"
version = "0.0.0"
description = "Facebook post action for GitHub workflows."
requires-python = ">=3.12"

dependencies = [
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
